--- a/Traitement_donnees.ipynb
+++ b/Traitement_donnees.ipynb
@@ -16,7 +16,8 @@
     "import re\n",
     "import urllib\n",
     "import geopandas as gpd\n",
-    "import bs4 "
+    "import bs4 \n",
+    "import numpy"
    ]
   },
   {
