ajout modèle kNN

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -40,10 +40,15 @@
     "import bs4 \n",
     "\n",
     "#Traitement des données :\n",
-    "from sklearn.preprocessing import LabelBinarizer, LabelEncoder, StandardScaler\n",
+    "from sklearn.preprocessing import LabelBinarizer, LabelEncoder, StandardScaler, MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "from sklearn.linear_model import Lasso, lasso_path\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import neighbors\n",
+    "\n",
+    "from math import sqrt\n",
     "\n",
     "# Représentations graphiques :\n",
     "import numpy as np\n",
@@ -1806,7 +1811,7 @@
    "source": [
     "### 2. Création de fonctions de preprocessing utilisables par la suite\n",
     "\n",
-    "On crée ici une fonction permettant de standardiser une base de données numériques passée en argument. Nous en aurons notamment besoin par la suite lorsque nous ferons un modèle Lasso pour sélectionner les variables d'intérêt de notre base de données."
+    "* On crée une fonction permettant de standardiser une base de données numériques passée en argument. Nous en aurons notamment besoin par la suite lorsque nous ferons un modèle Lasso pour sélectionner les variables d'intérêt de notre base de données."
    ]
   },
   {
@@ -1825,6 +1830,32 @@
     "    data = StandardScaler().fit(df).transform(df.fillna(0))\n",
     "    \n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* On crée aussi une fonction permettant de mettre toutes les variables d'une base de données numériques passée en argument à la même échelle. On utilise pour cela `MinMaxScaler`. Nous en aurons notamment besoin par la suite lorsque nous ferons un modèle kNN. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mise_echelle(df,mini,maxi) :\n",
+    "    \"\"\"\n",
+    "    Fonction renvoyant une version de la base de données df dans laquelle les colonnes ont été mises à l'échelle : \n",
+    "    à l'aide de MinMaxScaler, les données sont comprises entre mini et maxi.\n",
+    "    \n",
+    "    ! df ne doit contenir que des variables numériques !\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    data = MinMaxScaler(feature_range=(mini, maxi)).fit(df).transform(df)\n",
+    "    \n",
+    "    return pd.DataFrame(data, columns = df.columns)"
    ]
   },
   {
@@ -2533,15 +2564,19 @@
    "source": [
     "# Partie 3 - Modélisation \n",
     "\n",
-    "*(Les fonctions de cette partie sont disponibles dans les dossiers `modelisation` du dépôt git)*"
+    "*(Les fonctions de cette partie sont disponibles dans les dossiers `modelisation` du dépôt git)*\n",
+    "\n",
+    "On va tester deux modèles sur nos données pour essayer de prédire les loyers des appartements parisiens à partir des variables pertinentes sélectionnées par le modèle Lasso.\n",
+    "\n",
+    "De plus, on va veiller à systématiquement scinder nos données en un jeu de données test et un jeu de données d'entrainement. Cela permettra, en plus du fait de ne garder que les variables sélectionnées par le modèle Lasso, d'éviter les phénomènes de sur apprentissage dans nos modèles."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 1. Modèle de régression linéaire"
+   ]
   },
   {
    "cell_type": "code",
@@ -2568,7 +2603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\Rightarrow$ **ici, mettre les différents modèles implémentés**"
+    "$\\Rightarrow$ **ici, mettre reg lin avec : justification choix du modèle, implémentation, résultats avec indic perf et représentations graph (cf. résultats kNN), ...**"
    ]
   },
   {
@@ -2577,6 +2612,283 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Modèle kNN (k Nearest Neightbors)\n",
+    "\n",
+    "En guise de comparaison avec la régression linéaire, on a aussi tester l'implémentation du modèle kNN. On a choisi ce modèle, plutot qu'un modèle de `DecisionTree` ou `RandomForest`par exemple, pour son interprétabilité : alors que le `RandomForest` est un modèle un peu \"boite noire\", il est plus facile de comprendre la manière dont le modèle kNN réalise ses prédictions.\n",
+    "\n",
+    "Le principe général du modèle kNN pour prédire le loyer inconnu d'un appartement à partir d'une base d'appartements aux loyers connus est le suivant :\n",
+    "- A l'aide de la métrique définie, l'algorithme calcule la distance entre l'appartement cible et tous les appartements de loyer connu ;\n",
+    "- Ensuite, il ne garde que les $k$ plus proches appartements ;\n",
+    "- Le loyer qu'il prédit est alors la moyenne des loyers des appartements retenus. On peut également ajouter une pondération, pour que les appartements les plus similaires aient une influence plus importante sur la prédiction.\n",
+    "\n",
+    "**Cet algorithme nécessite donc de définir une métrique sur les données :**\n",
+    "\n",
+    "Pour chaque appartements, on a une variable binaire catégorielle (`meuble_bin`), une variable continue (`distance_centre_paris`), et une autre variable numérique que l'on a déjà justifié considéré comme variable numérique et non catégorielle (`piece`).\n",
+    "\n",
+    "Comme on a à la fois des variables catégorielles et non catégorielles, on a ici choisi d'utiliser une distance qui correspond à la **distance de Hamming** pour les variables catégorielles, et à la **distance de Manhattan** pour les variables numériques : \n",
+    "\n",
+    "$$\\forall x,y \\in \\mathbb{R}^k : d(x,y) = \\sum_{i=1}^{k} |x_i-y_i|$$\n",
+    "\n",
+    "Pour les variables binaires, $|x_i-y_i|$ vaudra donc 0 si $x_i=y_i$ et 1 sinon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) Préparation des données :\n",
+    "\n",
+    "On part de la base de données numériques `donnees_num.geojson`. \n",
+    "\n",
+    "- On utilise `MinMaxScaler` pour mettre à l'échelle toutes les variables explicatives, en les ramenant entre 0 et 1 par exemple.\n",
+    "- On sépare le jeu de données en un échantillon test et un échentillon sur lequel entrainer le modèle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "donnees_knn = donnees_num.copy()\n",
+    "\n",
+    "Y = donnees_knn['ref']\n",
+    "X = donnees_knn[['piece', 'distance_centre_paris', 'meuble_bin']]\n",
+    "\n",
+    "# Mise sur la même échelle des variables explicatives :\n",
+    "X = mise_echelle(X,0,1)\n",
+    "\n",
+    "#Création d'un jeu de données test et d'un jeu de données d'entrainement :\n",
+    "xTrain, xTest, yTrain, yTest = train_test_split(X, Y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Implémentation du modèle\n",
+    "\n",
+    "On implémente deux fonctions qui nous permettent de tester le modèle : \n",
+    "- une fonction `kNN` qui entraine le modèle kNN sur le jeu d'entrainement et renvoie ses prédictions sur le jeu test\n",
+    "- une fonction `indicateurs_perf` qui calcule les indicateurs de performance du modèle à partir de ces prédictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kNN(xTrain, xTest, yTrain, yTest,k) :\n",
+    "    \"\"\" Fonction qui réalise un modèle kNN. \n",
+    "    Entrées : \n",
+    "        - xTrain,yTrain : jeux de données sur lesquels entrainer le modèle\n",
+    "        - xTest,yTest : jeux de données sur lesquels faire les prédictions\n",
+    "        - k : hyperparamètre correspondant au nombre de voisins à considérer \n",
+    "    \n",
+    "    Sortie :\n",
+    "        - resultats : base de données contenant les loyers à prédire de yTest, et les loyers prédis par le modèle à partir de xTest\n",
+    "    \"\"\"\n",
+    "    #Entrainement du modèle sur le jeu de données d'entrainement :\n",
+    "    knn = neighbors.KNeighborsRegressor(n_neighbors = k,metric=\"manhattan\",weights=\"distance\")  \n",
+    "    knn.fit(xTrain, yTrain)  \n",
+    "    \n",
+    "    #Prédictions sur le jeu de données test :\n",
+    "    prediction = knn.predict(xTest) \n",
+    "    \n",
+    "    resultats = pd.DataFrame({'Loyers effectifs': list(yTest), 'Loyers prédis': list(prediction)})\n",
+    "    return resultats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indicateurs_perf (resultats) :\n",
+    "    \"\"\" \n",
+    "    Fonction qui calcule les indicateurs de performance MAE, MSE, RMSE et MAPE à partir de la base de données résultats du modèle knn.\n",
+    "    \n",
+    "    ! Modifie la base resultats en rajoutant des colonnes !\n",
+    "    \"\"\"   \n",
+    "    resultats['Ecarts_abs'] = abs(resultats['Loyers prédis']-resultats['Loyers effectifs'])\n",
+    "    resultats['Ecarts^2'] = resultats['Ecarts_abs']**2\n",
+    "    resultats['Percentage'] = resultats['Ecarts_abs']/resultats['Loyers effectifs']\n",
+    "    \n",
+    "    MAE = resultats['Ecarts_abs'].mean()\n",
+    "    MSE = resultats['Ecarts^2'].mean()\n",
+    "    RMSE = MSE**0.5\n",
+    "    MAPE = resultats['Percentage'].mean()\n",
+    "\n",
+    "    return pd.DataFrame({'MAE' : [MAE], 'MSE' : [MSE], 'RMSE' : [RMSE], 'MAPE' : [MAPE]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Choix de l'hyperparamètre $k$ :\n",
+    "\n",
+    "De la même manière que pour le modèle Lasso, on doit choisir un hyperparamètre $k$ qui correspond au nombre de voisins que l'on sélectionne dans l'algorithme KNN. \n",
+    "\n",
+    "Pour le choisir, on réalise un graphique représentant l'erreur RMSE des prédictions sur le jeu de données test, en fonction de la valeur de $k$ choisie :\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse = [] \n",
+    "\n",
+    "for k in range(1,21):\n",
+    "    resultats = kNN(xTrain, xTest, yTrain, yTest,k)\n",
+    "    indicateurs = indicateurs_perf (resultats)\n",
+    "    rmse.append(indicateurs['RMSE'][0])\n",
+    "    \n",
+    "sns.set_style(\"whitegrid\")\n",
+    "sns.lineplot(x=[k for k in range(1,21)], y=rmse).set(title = r\"Erreur RMSE du KNN sur le jeu de données test en fonction de l'hypermaramètre $k$ choisi\", xlabel=r'$k$', ylabel='RMSE')\n",
+    "plt.axvline(3,0,3,color=\"red\",linestyle=\"--\",label = r\"$k$=3\")\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On remarque un point d'inflexion pour $k=3$ (droite verticale rouge). C'est donc le nombre de voisins que nous allons choisir.\n",
+    "\n",
+    "On remarque que ce nombre est plutot faible, de même que les erreurs RMSE commises lors de la prédiction. Il semble donc que ce modèle soit plutôt performant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) Modèle kNN pour $k=3$ :\n",
+    "\n",
+    "On peut désormais faire tourner le modèle KNN avec $k=3$.\n",
+    "\n",
+    "Pour visualiser les résultats :\n",
+    "   - on affiche la table des indicateurs de performance \n",
+    "   - on trace un scatter plot des loyers prédis en fonction des loyers effectifs pour le jeu de données test\n",
+    "   - on trace la répartition des écarts entre loyers prédis et effectifs pour le jeu de données test (en valeur absolue), et  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k=3\n",
+    "\n",
+    "resultats = kNN(xTrain, xTest, yTrain, yTest,k)\n",
+    "indicateurs = indicateurs_perf (resultats)\n",
+    "\n",
+    "print(\"Indicateurs de performance du modèle kNN avec k=\"+str(k))\n",
+    "print(indicateurs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(1, 2, figsize=(12, 6)) \n",
+    "   \n",
+    "fig.suptitle(r'Modèle kNN avec $k=$'+str(k))\n",
+    "     \n",
+    "#Scatter plot :\n",
+    "sns.scatterplot(data=resultats, x='Loyers effectifs',y='Loyers prédis',ax = ax[0])\n",
+    "identite = [i for i in range(int(resultats['Loyers prédis'].min()),int(resultats['Loyers prédis'].max()))]\n",
+    "sns.lineplot(x=identite,y=identite,style=True, dashes=[(2,2)],color=\"red\",ax = ax[0])\n",
+    "ax[0].set_title(\"Loyers prédis en fonction des loyers \\n effectifs pour le jeu de données test\")\n",
+    "        \n",
+    "#Densité :\n",
+    "sns.kdeplot(resultats['Ecarts_abs'],ax = ax[1], fill=True, alpha=.3)\n",
+    "ax[1].set_title(\"Répartition des écarts entre loyers prédis \\n et loyers effectifs pour le jeu de données test \\n (en valeur absolue)\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\Rightarrow$ **ici, mettre commentaire sur les résultats du kNN, et comparaison entre reg lin et kNN**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
   },
   {
    "cell_type": "code",
